<resources>
    <string name="app_name">MyCPH</string>
    <string name="login">ลงชื่อผู้ใช้งาน</string>
    <string name="newregis2">ลงทะเบียนใหม่</string>
    <string name="newregis">สมัครสมาชิก</string>
    <string name="password">password</string>
    <string name="regis">สมัครสมาชิก</string>
    <string name="user">user</string>
    <string name="text">SignUp</string>
    <string name="name">Name :</string>
    <string name="nameregis">กรุณากรอกข้อมูล</string>
    <string name="namesave">ผู้บันทึก</string>
</resources>
